--- a/extr.ipynb
+++ b/extr.ipynb
@@ -41,14 +41,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "args = Arguments()\n",
-    "args.do_crawling = True\n",
-    "args.doi_file_path = './resources/dois.json'\n",
-    "args.raw_article_dir = './data/web_articles/'"
+    "args = Arguments()"
    ]
   },
   {
@@ -60,13 +57,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "25162abe9bf64027aaf94e750e39c170",
+       "model_id": "28bdff8a019c422cabd2fecad00115cb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -76,19 +73,105 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[WDM] - Downloading: 100%|██████████| 7.26M/7.26M [00:00<00:00, 28.2MB/s]\n"
+     ]
     }
    ],
    "source": [
+    "args.do_crawling = True\n",
+    "args.doi_file_path = './resources/dois.json'\n",
+    "args.raw_article_dir = './data/web_articles/'\n",
+    "\n",
     "if args.do_crawling:\n",
     "    crawl(args)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Parse articles"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "./data/web_articles/10.1016&sl;j.jelechem.2019.02.027.html does not have HTML sections!\n",
+      "./data/web_articles/10.1039&sl;C2EE03025J.html does not have abstract!\n",
+      "./data/web_articles/10.1039&sl;C3TA10368D.html does not have abstract!\n",
+      "./data/web_articles/10.1039&sl;C3TA10612H.html does not have abstract!\n",
+      "Encounter exception list index out of range while parsing file ./data/web_articles/10.1039&sl;C4TA00494A.html.\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/mnt/284ac980-b350-4035-8e02-707f671ad89e/yli/MaterialPropertyExtractor/pipeline/parser.py\", line 30, in parse\n",
+      "    article, component_check = parse_html(file_path)\n",
+      "  File \"/localscratch/yli/miniconda/envs/py39/lib/python3.9/site-packages/chempp/article_constr.py\", line 726, in parse_html\n",
+      "    doi, publisher = search_html_doi_publisher(soup)\n",
+      "  File \"/localscratch/yli/miniconda/envs/py39/lib/python3.9/site-packages/chempp/article_constr.py\", line 659, in search_html_doi_publisher\n",
+      "    doi_url = doi_sec[0].a.text.strip().lower()\n",
+      "IndexError: list index out of range\n",
+      "./data/web_articles/10.1039&sl;C8TA04477E.html does not have abstract!\n",
+      "Encounter exception Publisher not found! while parsing file ./data/web_articles/10.2478&sl;s11696-014-0611-1.html.\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/mnt/284ac980-b350-4035-8e02-707f671ad89e/yli/MaterialPropertyExtractor/pipeline/parser.py\", line 30, in parse\n",
+      "    article, component_check = parse_html(file_path)\n",
+      "  File \"/localscratch/yli/miniconda/envs/py39/lib/python3.9/site-packages/chempp/article_constr.py\", line 726, in parse_html\n",
+      "    doi, publisher = search_html_doi_publisher(soup)\n",
+      "  File \"/localscratch/yli/miniconda/envs/py39/lib/python3.9/site-packages/chempp/article_constr.py\", line 640, in search_html_doi_publisher\n",
+      "    publisher = check_html_publisher(soup)\n",
+      "  File \"/localscratch/yli/miniconda/envs/py39/lib/python3.9/site-packages/chempp/article_constr.py\", line 613, in check_html_publisher\n",
+      "    raise ValueError('Publisher not found!')\n",
+      "ValueError: Publisher not found!\n"
+     ]
+    }
+   ],
+   "source": [
+    "args.do_parsing = True\n",
+    "args.raw_article_dir = './data/web_articles/'\n",
+    "args.processed_article_dir = './data/web_articles_parsed/'\n",
+    "\n",
+    "if args.do_parsing:\n",
+    "    parse(args)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Information Extraction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "args.do_extraction = True\n",
+    "args.keyword_path = [r\"./resources/tensile.json\"]\n",
+    "args.save_html = True\n",
+    "args.save_jsonl = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if args.do_extraction:\n",
+    "    extract(args)\n"
+   ]
   }
  ],
  "metadata": {
